fix(web): fix toolbar text overflow and modal window display in firefox;

--- a/actor-apps/app-web/src/styles/modals.scss
+++ b/actor-apps/app-web/src/styles/modals.scss
@@ -58,8 +58,6 @@
   background-color: $modal-default-background;
   box-shadow: 0 4px 10px 0 rgba(0,0,0,.25);
 
-  flex: 0;
-
   &__header {
     position: relative;
     //z-index: 5;
